implement: Profiles API, CORS Filter, AuthFilter
