# api-document.yaml
@@ -148,6 +148,8 @@ paths:
                   $ref: '#/components/schemas/User'
         '401':
           description: Chưa đăng nhập hoặc không có quyền truy cập
+      security:
+        - basicAuth: []
     post:
       tags:
         - User
@@ -231,6 +233,8 @@ paths:
                   type: string
                   description: Vai trò
                   example: USER
+      security:
+        - basicAuth: []
       responses:
         '200':
           description: Thông tin người dùng
@@ -609,10 +613,6 @@ components:
           type: string
           description: Email của người dùng
           example: dungyourluv@gmail.com
-        name:
-          type: string
-          description: Tên của người dùng
-          example: Dung
         isAdmin:
           type: boolean
           description: Vai trò của người dùng
